[gd_scene load_steps=10 format=2]

[ext_resource path="res://images/rotation.png" type="Texture" id=1]
[ext_resource path="res://images/item-belt.png" type="Texture" id=2]
[ext_resource path="res://hotbar_unselected.tres" type="StyleBox" id=3]
[ext_resource path="res://images/item-chest.png" type="Texture" id=4]
[ext_resource path="res://images/item-machine.png" type="Texture" id=5]
[ext_resource path="res://MachineUI.gd" type="Script" id=6]
[ext_resource path="res://images/item-wrench.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="Hotbar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 110.0
margin_top = 97.0
margin_right = 274.0
margin_bottom = 121.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel"]
margin_left = 4.0
margin_top = 4.0
margin_right = 288.0
margin_bottom = 56.0
columns = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="Slot2" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false

[node name="Slot3" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Slot4" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 60.0
margin_right = 76.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot4"]
position = Vector2( -20, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Slot5" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 80.0
margin_right = 96.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot5"]
position = Vector2( -40, 0 )
scale = Vector2( 2, 2 )
centered = false

[node name="Slot6" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 100.0
margin_right = 116.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot6"]
position = Vector2( -60, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Slot7" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 120.0
margin_right = 136.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot7"]
position = Vector2( -80, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false

[node name="Slot8" type="Panel" parent="CanvasLayer/Panel/GridContainer"]
margin_left = 140.0
margin_right = 156.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel/GridContainer/Slot8"]
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )
centered = false

[node name="CurrentJob" type="Panel" parent="CanvasLayer"]
margin_left = 160.0
margin_top = 53.0
margin_right = 225.0
margin_bottom = 77.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/CurrentJob"]
margin_left = 4.0
margin_top = 4.0
margin_right = 288.0
margin_bottom = 56.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slot1" type="Panel" parent="CanvasLayer/CurrentJob/GridContainer"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/CurrentJob/GridContainer/Slot1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false

[node name="FILLER" type="Panel" parent="CanvasLayer/CurrentJob/GridContainer"]
margin_left = 20.0
margin_right = 36.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/CurrentJob/GridContainer/FILLER"]
position = Vector2( 16, 1 )
rotation = 1.5708
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
centered = false

[node name="Slot2" type="Panel" parent="CanvasLayer/CurrentJob/GridContainer"]
margin_left = 40.0
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
custom_styles/panel = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="CanvasLayer/CurrentJob/GridContainer/Slot2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false
